--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ android {
         dependencies {
             implementation files('libs/txdevicesdk.jar')
             implementation files('libs/zixing-core-3.2.0.jar')
+            implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
             implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
             implementation "com.android.support:recyclerview-v7:$rootProject.recyclerViewVersion"
             implementation "com.android.support:appcompat-v7:$rootProject.appcompat_v7_Version"
