--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,12 +59,15 @@ android {
         dependencies {
             implementation files('libs/txdevicesdk.jar')
             implementation files('libs/zixing-core-3.2.0.jar')
-            implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+            implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
             implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
             implementation "com.android.support:recyclerview-v7:$rootProject.recyclerViewVersion"
             implementation "com.android.support:appcompat-v7:$rootProject.appcompat_v7_Version"
             implementation "com.android.support.constraint:constraint-layout:$rootProject.constraintVersion"
             implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3Version"
+
+            //Bugly
+            implementation 'com.tencent.bugly:crashreport:latest.release'
         }
     }
 
