--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ android {
 
             //Bugly
             implementation 'com.tencent.bugly:crashreport:latest.release'
+            //glide
+            implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
         }
     }
 
