--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         appcompat_v7_Version = '27.1.1'
         constraintVersion = '1.1.3'
         okhttp3Version = '3.1.2'
+        glideVersion = '3.7.0'
 
     }
 
