--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
-        android:name="com.MyApp"
+        android:name="com.booyue.MonitorApplication"
         android:allowBackup="true"
         android:debuggable="true"
         android:icon="@drawable/app_logo1"
