--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,10 +43,10 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name="com.booyue.binding.BooyueGuideActivity"
+            android:name="com.booyue.ui.binding.BooyueGuideActivity"
             android:label="@string/app_name" />
         <activity
-            android:name="com.booyue.audiochat.BooyueAudioChatActivity"
+            android:name="com.booyue.ui.audiochat.BooyueAudioChatActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="keyboardHidden|orientation|locale|screenSize"
             android:label="@string/app_name"
@@ -54,7 +54,7 @@
             android:process=":video"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
-            android:name="com.booyue.videochat.BooyueVideoChatActivitySF"
+            android:name="com.booyue.ui.videovhat.BooyueVideoChatActivitySF"
             android:alwaysRetainTaskState="true"
             android:configChanges="keyboardHidden|orientation|locale|screenSize"
             android:label="@string/app_name"
@@ -63,7 +63,7 @@
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
-            android:name="com.booyue.friend.BooyueFriendListActivity"
+            android:name="com.booyue.ui.friend.BooyueFriendListActivity"
             android:alwaysRetainTaskState="true"
             android:configChanges="keyboardHidden|orientation|locale|screenSize"
             android:label="@string/app_name"
